--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <spring-ai.version>1.0.0</spring-ai.version>
+        <spring-ai.version>1.0.1</spring-ai.version>
         <spring-ai-giga-chat.version>1.0.3</spring-ai-giga-chat.version>
 
         <allure-bom.version>2.29.0</allure-bom.version>
@@ -91,6 +91,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- OpenRouter via Spring AI OpenAI starter (autoconfig OpenAiChatModel from YAML) -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-openai</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
