--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,12 @@
         </developer>
     </developers>
 
-    <properties>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <properties>
+            <java.version>21</java.version>
+            <maven.compiler.source>21</maven.compiler.source>
+            <maven.compiler.target>21</maven.compiler.target>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <pmd.skip>false</pmd.skip>
 
         <spring-ai.version>1.0.1</spring-ai.version>
         <spring-ai-giga-chat.version>1.0.3</spring-ai-giga-chat.version>
@@ -46,10 +47,9 @@
         <langgraph4j.version>1.6.0</langgraph4j.version>
         <json-schema-validator.version>1.5.2</json-schema-validator.version>
 
-        <!-- Formatting -->
+        <!-- plugins -->
         <spotless.version>2.43.0</spotless.version>
-        <!-- Version of com.palantir.javaformat used by Spotless palantirJavaFormat step -->
-        <palantir.format.version>2.44.0</palantir.format.version>
+        <pmd-maven-plugin.version>3.26.0</pmd-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -144,6 +144,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Allure core (no JUnit5 listener to avoid env hostname lookups) -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -160,6 +167,19 @@
 <!--                </executions>-->
             </plugin>
 
+            <!-- Ensure Allure does not attempt hostname lookup in restricted env -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <allure.hostName>localhost</allure.hostName>
+                        <ALLURE_HOST_NAME>localhost</ALLURE_HOST_NAME>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+
             <!-- Code formatting with Spotless (Palantir Java Format) -->
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
@@ -174,6 +194,30 @@
                 <executions>
                     <execution>
                         <id>spotless-check</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${pmd-maven-plugin.version}</version>
+                <configuration>
+                    <failOnViolation>false</failOnViolation>
+                    <skip>${pmd.skip}</skip>
+                    <skipPmdError>true</skipPmdError>
+                    <rulesets>
+                        <ruleset>${project.basedir}/configs/pmd-ruleset.xml</ruleset>
+                    </rulesets>
+                    <verbose>true</verbose>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>pmd</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
